--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Agenda Inteligente - Video Tutoriales" />
+    <meta property="og:image" content="https://example.com/example-featured-image.jpg" />
+    <meta property="og:description" content="Example - Description of my Site" />  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Videos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
