--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <meta property="og:title" content="Agenda Inteligente - Video Tutoriales" />
-    <meta property="og:image" content="https://example.com/example-featured-image.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:description" content="Example - Description of my Site" />  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
