--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Agenda Inteligente - Video Tutoriales" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:description" content="Example - Description of my Site" />  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Videos</title>
+    <meta property="og:title" content="Agenda Inteligente - Video Tutoriales" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:description" content="Example - Description of my Site" />  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
